fix error window z-index #541

--- a/app/assets/stylesheets/foundation-overrides.scss
+++ b/app/assets/stylesheets/foundation-overrides.scss
@@ -9,7 +9,7 @@
   font-size: inherit;
   border: none;
   border-radius: 6px;
-  background-color: #FFFFFF;
+  background-color: #fff;
   box-shadow: 0 2px 12px 0 rgba(0,0,0,0.15), 0 2px 12px 0 rgba(0,0,0,0.15);
 }
 
